Adding cache behaviour to people search.