@@ -1,37 +1,37 @@
 package com.napfernandes.starwarsapi.service;
 
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
 
+import com.napfernandes.starwarsapi.client.StarWarsPeopleClient;
 import com.napfernandes.starwarsapi.dto.PersonOutput;
 import com.napfernandes.starwarsapi.entity.Person;
 import com.napfernandes.starwarsapi.mapper.PersonMapper;
 
 @Service
-public class StarWarsPeopleServiceImpl extends StarWarsService implements StarWarsPeopleService {
+public class StarWarsPeopleServiceImpl implements StarWarsPeopleService {
     private PersonMapper personMapper;
+    private CacheService<Person> personCacheService;
+    private StarWarsPeopleClient starWarsPeopleClient;
 
     public StarWarsPeopleServiceImpl(
             PersonMapper personMapper,
-            WebClient starWarsApiClient) {
-        super(starWarsApiClient);
-
+            CacheService<Person> personCacheService,
+            StarWarsPeopleClient starWarsPeopleClient) {
         this.personMapper = personMapper;
+        this.personCacheService = personCacheService;
+        this.starWarsPeopleClient = starWarsPeopleClient;
     }
 
     @Override
     public PersonOutput getPersonById(int personId) {
-        Person person = super.starWarsApiClient.get()
-                .uri("/people/%s/".formatted(personId))
-                .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .retrieve()
-                .bodyToMono(Person.class)
-                .block();
+        Person person = null;
+        String cacheKey = String.format("person#%s", personId);
+
+        person = this.personCacheService.getItem(cacheKey);
 
         if (person == null) {
-            return null;
+            person = this.starWarsPeopleClient.getPersonById(personId);
+            this.personCacheService.setItem(cacheKey, person);
         }
 
         return this.personMapper.personToPersonOutput(person);
